# 6-recommendations-for-optimizing-a-spark-job

./: README.md  configurations.json  fonctionnement_cluster_spark.excalidraw  main.py  setup.cfg
notebooks/: pipeline.ipynb
sparkopt/: clustering.py  configurations.json  feature_engineering.py  from_csv_to_parquet.py  grid_search_conf_spark_job.py  insee.py  main.py  meteo.py  spark_settings.py
sparkopt/tests/: test_configuration_spark.py
