[metadata]
name = Optimization of a Spark Job
version = 1.0
author = Simon Grah
author_email = simon.grah@octo.com
home-page = https://gitlab.com/simon.grah/spark_optimization
license =
description = Optimization of a Spark Job.
url =
platform = any
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers, DataScientists, MLEngineers
    Operating System :: OS Independent
project_urls =
    Bug Tracker = https://gitlab.com/simon.grah/spark_optimization/-/issues

[options]
zip_safe = false
packages = find:
install_requires =
    scikit-learn==0.24.1
    pyspark==3.1.1
    mlflow==1.14.1
    tqdm==4.59.0
    pytest==6.2.2
python_requires = >=3.8